--- a/canvas_courses_all.ipynb
+++ b/canvas_courses_all.ipynb
@@ -103,20 +103,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_Canvas__requester': <canvasapi.requester.Requester at 0x7fdabac68c40>}"
+       "{'_Canvas__requester': <canvasapi.requester.Requester at 0x7ff8c9c63b50>}"
       ]
      },
      "execution_count": 5,
@@ -155,26 +148,16 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Define parameters etc. for course tab table\n",
-    "\n",
-    "* The tab information for each course will be obtained along with the course information\n",
-    "* They will be appended in a list\n",
-    "* The list will be turned to a dataframe and sent to GBQ"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tab_keys = ['id', 'html_url', 'full_url', 'position', 'visibility', 'label', 'type', 'course_id']\n",
-    "tab_header = ['course_name']\n",
-    "tab_header.extend(tab_keys)\n",
-    "all_tabs_list = []"
+    "#Define parameters etc. for course tab table\n",
+    "#The tab information for each course will be obtained along with the course information\n",
+    "#They will be appended in a list\n",
+    "#The list will be turned to a dataframe and sent to GBQ\n",
+    "tab_dict_list = []"
    ]
   },
   {
@@ -477,9 +460,11 @@
     "\n",
     "        #Append the list of tabs to all_tabs_list\n",
     "        for tab_ in all_tabs:\n",
-    "            tab_list = [c1.name]\n",
-    "            tab_list.extend([tab_.__dict__[tk_] for tk_ in tab_keys])\n",
-    "            all_tabs_list.append(tab_list)\n",
+    "            tab_dict = tab_.__dict__\n",
+    "            tab_dict['course_name'] = c1.name\n",
+    "            \n",
+    "            #print(tab_dict)\n",
+    "            tab_dict_list.append(tab_dict)\n",
     "\n",
     "    except:\n",
     "        pass\n",
@@ -606,48 +591,48 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15480</th>\n",
-       "      <td>17563</td>\n",
-       "      <td>LING123</td>\n",
-       "      <td>Industry workshop 2022</td>\n",
-       "      <td>139</td>\n",
-       "      <td>2022-08-26T12:02:55Z</td>\n",
+       "      <th>15606</th>\n",
+       "      <td>17692</td>\n",
+       "      <td>21H.URW</td>\n",
+       "      <td>21H.URW Undergrad Research Wellesley</td>\n",
+       "      <td>114</td>\n",
+       "      <td>2022-09-10T12:33:21Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15481</th>\n",
-       "      <td>17564</td>\n",
-       "      <td>IDS.330</td>\n",
-       "      <td>IDS.330 Real Optns for Prod &amp; Sys Dsgn</td>\n",
-       "      <td>106</td>\n",
-       "      <td>2022-08-27T12:33:25Z</td>\n",
+       "      <th>15607</th>\n",
+       "      <td>17693</td>\n",
+       "      <td>4.288 L01</td>\n",
+       "      <td>4.288 Prep-SMArchS Thesis, Lecture 1</td>\n",
+       "      <td>88</td>\n",
+       "      <td>2022-09-10T12:33:23Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15482</th>\n",
-       "      <td>17565</td>\n",
-       "      <td>EC.S00</td>\n",
-       "      <td>EC.S00 Special Subject: Edgerton Ctr</td>\n",
-       "      <td>134</td>\n",
-       "      <td>2022-08-27T12:33:25Z</td>\n",
+       "      <th>15608</th>\n",
+       "      <td>17694</td>\n",
+       "      <td>4.288 L02</td>\n",
+       "      <td>4.288 Prep-SMArchS Thesis, Lecture 2</td>\n",
+       "      <td>88</td>\n",
+       "      <td>2022-09-10T12:33:23Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15483</th>\n",
-       "      <td>17566</td>\n",
-       "      <td>21G.702 L01</td>\n",
-       "      <td>21G.702 Spanish II, Lecture 1 (Yagüe González)</td>\n",
-       "      <td>113</td>\n",
-       "      <td>2022-08-30T14:29:17Z</td>\n",
+       "      <th>15609</th>\n",
+       "      <td>17695</td>\n",
+       "      <td>4.341 L02</td>\n",
+       "      <td>4.341 Intro to Photo &amp; Related Media, Lecture 2</td>\n",
+       "      <td>88</td>\n",
+       "      <td>2022-09-10T12:33:23Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15484</th>\n",
-       "      <td>17567</td>\n",
-       "      <td>21G.702 L03</td>\n",
-       "      <td>21G.702 Spanish II, Lecture 3</td>\n",
-       "      <td>113</td>\n",
-       "      <td>2022-08-30T14:45:25Z</td>\n",
+       "      <th>15610</th>\n",
+       "      <td>17696</td>\n",
+       "      <td>4.341 L01</td>\n",
+       "      <td>4.341 Intro to Photo &amp; Related Media, Lecture 1</td>\n",
+       "      <td>88</td>\n",
+       "      <td>2022-09-10T12:33:24Z</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>15485 rows × 5 columns</p>\n",
+       "<p>15611 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -658,24 +643,24 @@
        "3             18            21G.614   \n",
        "4             20            21G.501   \n",
        "...          ...                ...   \n",
-       "15480      17563            LING123   \n",
-       "15481      17564            IDS.330   \n",
-       "15482      17565             EC.S00   \n",
-       "15483      17566        21G.702 L01   \n",
-       "15484      17567        21G.702 L03   \n",
+       "15606      17692            21H.URW   \n",
+       "15607      17693          4.288 L01   \n",
+       "15608      17694          4.288 L02   \n",
+       "15609      17695          4.341 L02   \n",
+       "15610      17696          4.341 L01   \n",
        "\n",
-       "                                          course_name  account_id  \\\n",
-       "0                                   Welcome to Canvas           1   \n",
-       "1                                    GSL Canvas Pilot          15   \n",
-       "2                   Digital Media in Japan and Korea           11   \n",
-       "3                                          Russian IV          14   \n",
-       "4                              Japanese I (Section 1)          11   \n",
-       "...                                               ...         ...   \n",
-       "15480                          Industry workshop 2022         139   \n",
-       "15481          IDS.330 Real Optns for Prod & Sys Dsgn         106   \n",
-       "15482            EC.S00 Special Subject: Edgerton Ctr         134   \n",
-       "15483  21G.702 Spanish II, Lecture 1 (Yagüe González)         113   \n",
-       "15484                   21G.702 Spanish II, Lecture 3         113   \n",
+       "                                           course_name  account_id  \\\n",
+       "0                                    Welcome to Canvas           1   \n",
+       "1                                     GSL Canvas Pilot          15   \n",
+       "2                    Digital Media in Japan and Korea           11   \n",
+       "3                                           Russian IV          14   \n",
+       "4                               Japanese I (Section 1)          11   \n",
+       "...                                                ...         ...   \n",
+       "15606             21H.URW Undergrad Research Wellesley         114   \n",
+       "15607             4.288 Prep-SMArchS Thesis, Lecture 1          88   \n",
+       "15608             4.288 Prep-SMArchS Thesis, Lecture 2          88   \n",
+       "15609  4.341 Intro to Photo & Related Media, Lecture 2          88   \n",
+       "15610  4.341 Intro to Photo & Related Media, Lecture 1          88   \n",
        "\n",
        "                 created_at  \n",
        "0      2016-01-07T16:30:12Z  \n",
@@ -684,13 +669,13 @@
        "3      2016-10-11T13:39:46Z  \n",
        "4      2016-10-11T13:55:59Z  \n",
        "...                     ...  \n",
-       "15480  2022-08-26T12:02:55Z  \n",
-       "15481  2022-08-27T12:33:25Z  \n",
-       "15482  2022-08-27T12:33:25Z  \n",
-       "15483  2022-08-30T14:29:17Z  \n",
-       "15484  2022-08-30T14:45:25Z  \n",
+       "15606  2022-09-10T12:33:21Z  \n",
+       "15607  2022-09-10T12:33:23Z  \n",
+       "15608  2022-09-10T12:33:23Z  \n",
+       "15609  2022-09-10T12:33:23Z  \n",
+       "15610  2022-09-10T12:33:24Z  \n",
        "\n",
-       "[15485 rows x 5 columns]"
+       "[15611 rows x 5 columns]"
       ]
      },
      "execution_count": 11,
@@ -737,15 +722,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-9-9258413be3aa>:232: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-9-70409fe6decc>:232: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_times_all = np.array(fa_times_all, dtype='datetime64')\n",
-      "<ipython-input-9-9258413be3aa>:233: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-9-70409fe6decc>:233: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_c_times_all = np.array(fa_c_times_all, dtype='datetime64')\n",
-      "<ipython-input-9-9258413be3aa>:235: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-9-70409fe6decc>:235: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_times = np.array(fa_times, dtype='datetime64')\n",
-      "<ipython-input-9-9258413be3aa>:236: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-9-70409fe6decc>:236: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_c_times = np.array(fa_c_times, dtype='datetime64')\n",
-      "<ipython-input-9-9258413be3aa>:251: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-9-70409fe6decc>:251: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  q_times = np.array(q_times, dtype='datetime64')\n"
      ]
     },
@@ -1018,15 +1003,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-9-9258413be3aa>:232: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-9-70409fe6decc>:232: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_times_all = np.array(fa_times_all, dtype='datetime64')\n",
-      "<ipython-input-9-9258413be3aa>:233: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-9-70409fe6decc>:233: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_c_times_all = np.array(fa_c_times_all, dtype='datetime64')\n",
-      "<ipython-input-9-9258413be3aa>:235: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-9-70409fe6decc>:235: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_times = np.array(fa_times, dtype='datetime64')\n",
-      "<ipython-input-9-9258413be3aa>:236: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-9-70409fe6decc>:236: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_c_times = np.array(fa_c_times, dtype='datetime64')\n",
-      "<ipython-input-9-9258413be3aa>:251: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-9-70409fe6decc>:251: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  q_times = np.array(q_times, dtype='datetime64')\n"
      ]
     },
@@ -1143,13 +1128,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Create course tab dataframe from the list:\n",
-    "course_tab_df = pd.DataFrame.from_records(all_tabs_list, columns=tab_header)\n",
-    "\n",
+    "course_tab_df = pd.DataFrame(tab_dict_list)\n",
+    "course_tab_df.drop(['_requester'], axis=1, inplace=True)\n",
     "#Send out course tabs dataframe to GBQ\n",
     "course_tab_df.to_gbq('lt_courses.{}'.format(tab_out_table), project_id, if_exists='replace', credentials=credentials)"
    ]
